experiment/exp2-ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress
spec:
  type: NodePort
  selector:
    app: app-ingress
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
