experiment/exp2-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-exp
spec:
  rules:
    - host: www.node.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-ingress
                port: 
                  number: 8080
